--- a/postgres-service.yaml
+++ b/postgres-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db
-  labes:
+  labels:
     name: postgres-service
     app: demo-voting-app
 spec:
