--- a/voting-app-pod.yaml
+++ b/voting-app-pod.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Pod
-metada:
+metadata:
   name: voting-app-pod
-  labes:
+  labels:
     name: voting-app-pod
     app: demo-voting-app
 spec:
