--- a/voting-app-service.yaml
+++ b/voting-app-service.yaml
@@ -7,10 +7,10 @@ metadata:
     app: demo-voting-app
 spec:
   type: NodePort
-  port:
-     -port: 80
+  ports:
+    - port: 80
       targetPort: 80
       nodePort: 3004
   selector:
-      name: voting-app-pod
-      app: demo-voting-app
+    name: voting-app-pod
+    app: demo-voting-app
