--- a/redis-service.yaml
+++ b/redis-service.yaml
@@ -6,8 +6,8 @@ metadata:
     name: redis-service
     app: demo-voting-app
 spec:
-  type: clusterIP
-  port:
+  type: ClusterIP
+  ports:
    - port: 6379
      targetPort: 6379
   selector:
