--- a/postgres-service.yaml
+++ b/postgres-service.yaml
@@ -6,10 +6,10 @@ metadata:
     name: postgres-service
     app: demo-voting-app
 spec:
-  type: clusterIP
-  port:
-     -port: 5432
-      targetPort: 5432
+  type: ClusterIP
+  ports:
+     - port: 5432
+       targetPort: 5432
   selector:
       name: postgres-pod
       app: demo-voting-app
