--- a/redis-service.yaml
+++ b/redis-service.yaml
@@ -6,9 +6,9 @@ metadata:
     name: redis-service
     app: demo-voting-app
 spec:
-  type: ClusterIP
-  ports:
-   - port: 6379
+  type: clusterIP
+  port:
+    -port: 6379
      targetPort: 6379
   selector:
       name: redis-pod
