--- a/postgres-service.yaml
+++ b/postgres-service.yaml
@@ -6,9 +6,9 @@ metadata:
     name: postgres-service
     app: demo-voting-app
 spec:
-  type: clusterIP
+  type: ClusterIP
   ports:
-     -port: 5432
+    - port: 5432
       targetPort: 5432
   selector:
       name: postgres-pod
